Fix context menu button on root node only half visible

--- a/src/components/modes/treemode/JSONNode.scss
+++ b/src/components/modes/treemode/JSONNode.scss
@@ -12,6 +12,11 @@
     padding-bottom: $contents-padding;
     box-sizing: border-box;
 
+    > .header-outer :global(.context-menu-button) {
+      top: 1px;
+      right: -$context-menu-button-size - 2px;
+    }
+
     > .contents-outer > .contents {
       padding-left: 0;
     }
